--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ body{
   border: none;
 }
 
+#h button:hover{
+  box-shadow : 0px 0px 5px black;
+}
+
 h1{
   text-align: center;
   font-size: 70px;
