--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url("../images/grid.jpg");
+  background-image: url("https://cloud.githubusercontent.com/assets/8151246/4102368/25679780-3126-11e4-9009-5b3f90bd0313.jpg");
   font-family: 'Open Sans', sans-serif;
 }
 
