--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 }
 
 #wrapper{
-  background-image: url("../images/background.jpg");
+  background-image: url("https://cloud.githubusercontent.com/assets/8151246/4102369/31b7d55e-3126-11e4-8bde-f60126cd6a8a.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 1000px; 
