--- a/style.css
+++ b/style.css
@@ -77,8 +77,8 @@ a:hover{
 #content{
   margin-left: auto;
   margin-right: auto;
-  padding: 60px;
-  padding-bottom: 200px;
+  padding-top: 60px;
+  padding-bottom: 120px;
   color: #212222;
 }
 
