--- a/style.css
+++ b/style.css
@@ -95,6 +95,19 @@ a:hover{
   margin-bottom: 1em;
 }
 
+.carousel-page{
+width:100%;
+height:400px;
+background-color: white;
+color: white;
+margin-top: 100px;
+margin-bottom: 100px;
+}
+
+.carousel-caption{
+  font-size: 50px;
+}
+
 footer{
   bottom: 0px;
   left: 0px;
